updated ui for sample component

--- a/src/app/components/sample-component/sample-component.html
+++ b/src/app/components/sample-component/sample-component.html
@@ -1,1 +1,5 @@
-<p>sample-component works!</p>
+<div class="component-box">
+    <span class="emoji">✨</span>
+    <span>Sample Component works!</span>
+    <span class="emoji">🚀</span>
+</div>
